Bump Spring Boot from 3.3.1 to 3.3.9